--- a/mission/index.html
+++ b/mission/index.html
@@ -16,7 +16,7 @@
     <main>
         <p>Brigham Young University-Idaho was founded and is supported and guided by The Church of Jesus Christ of Latter-day Saints. Its mission is to develop disciples of Jesus Christ who are leaders in their homes, the Church, and their communities.</p>
 
-        <p>The university does this by:</p>
+        <p id="italic">The university does this by:</p>
 
         <ol>
             <li>Building testimonies of the restored gospel of Jesus Christ and fostering its principles in a wholesome academic, cultural, and social environment.</li>
