--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <header>
         <h1>Isabel Falin: WDD131 Portfolio</h1>
     </header>
-    <main></main>
+    <main>
+        <nav>
+            <a href="mission/index.html">BYU Mission Statment</a>
+        </nav>
+    </main>
     <footer></footer>
 </body>
 </html>
