--- a/mission/index.html
+++ b/mission/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <select name="dropdown" id="menu">
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
+    </select>
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
