--- a/mission/index.html
+++ b/mission/index.html
@@ -4,7 +4,7 @@
         <option value="light">Light</option>
         <option value="dark">Dark</option>
     </select>
-<head>
+<head> 
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="description" content="byu mission statment recreation">
@@ -30,8 +30,9 @@
             </ol>
         </main>
         <footer>
-            <img src="byui-logo_blue.webp" alt="byui logo">
+            <img id="logo" src="byui-logo_blue.webp" alt="byui logo">
         </footer>
     </div>
+    <script src="mission.js"></script>
 </body>
 </html>
