dom assignment week 2

--- a/week2/dom-basics.html
+++ b/week2/dom-basics.html
@@ -20,5 +20,7 @@
         <p class="green">This is a paragraph with an class</p>
       </div>
     </section>
+    <script src="dom-basics.js" defer></script>
   </body>
+  
 </html>
