i am so done with DOM

--- a/week4/dom.html
+++ b/week4/dom.html
@@ -37,7 +37,7 @@
       <button id="submitTask">Enter</button>
     </section>
     <ul id="todoList" class="todos"></ul>
-    <script src="events.js"></script>
+    <script src="dom.js"></script>
   </body>
 </html>
 
