--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -11,10 +11,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mooli&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <header>
         <h1> Cool Pics 📷</h1>
-        <button id="button">Menu</button>
+        <button id="menu-button">Menu</button>
         <nav id="nav"> 
             <a href="">Home</a>
             <a href="">People</a>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <h2>Current Work</h2>
-        <section class="gallery">
+        <section id="gallerytoo" class="gallery">
             <figure>
                 <img src="norris-sm.jpeg" alt="picture">
             </figure>
