beginning html and css for book blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
         <nav>
             <a href="mission/index.html">BYU Mission Statment</a>
+            <a href="blog/index.html">Book Blog</a>
         </nav>
     </main>
     <footer></footer>
