html done for credit card

--- a/week7/form-demo.html
+++ b/week7/form-demo.html
@@ -36,8 +36,8 @@
           title="Enter a 16 digit credit card number"
           placeholder="Enter 16 Digits"><br>
 
-          <label id="paypal-label" class="hide" for="paypal">PayPal Username:</label><br>
-          <input class="hide" type="text" id="paypal" name="paypal"
+          <label id="paypal-label" class="hide" for="paypal">PayPal username:</label><br>
+          <input class="hide" type="number" id="paypal" name="paypal"
           placeholder="Enter PayPal Username"><br>
 
           <input type="submit" value="Place Order" required>
