--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <nav>
             <a href="mission/index.html">BYU Mission Statment</a>
             <a href="blog/index.html">Book Blog</a>
+            <a href="creditcard/index.html">Credit Card Page</a>
         </nav>
     </main>
     <footer></footer>
