--- a/register/index.html
+++ b/register/index.html
@@ -18,6 +18,7 @@
             <a href="mission/index.html">BYU Mission Statment</a>
             <a href="blog/index.html">Book Blog</a>
             <a href="creditcard/index.html">Credit Card Page</a>
+            <a href="register/register.html">Register Page</a>
         </nav>
     </main>
     <footer></footer>
