--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="blog/index.html">Book Blog</a>
             <a href="creditcard/index.html">Credit Card Page</a>
             <a href="register/register.html">Register Page</a>
+            <a href="recipes/index.html">Recipes Page</a>
         </nav>
     </main>
     <footer></footer>
