--- a/recipes/index.html
+++ b/recipes/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Check Out Our Cool Recipes!">
     <meta property="og:image" content="images/sweet-potato-waffle-md.jpg">
-    <meta property="og:url" content="URL of the page">
+    <meta property="og:url" content="https://isabelfalin.github.io/wdd131/recipes/index.html">
     <meta name="twitter:card" content="images/sweet-potato-waffle-md.jpg">
     </head>
 <body>
