--- a/recipes/index.html
+++ b/recipes/index.html
@@ -19,9 +19,9 @@
     <meta property="og:title" content="RecipeBook">
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Check Out Our Cool Recipes!">
-    <meta property="og:image" content="images/sweet-potato-waffle-md.jpg">
+    <meta property="og:image" content="https://isabelfalin.github.io/wdd131/recipes/images/sweet-potato-waffle-md.jpg">
     <meta property="og:url" content="https://isabelfalin.github.io/wdd131/recipes/index.html">
-    <meta name="twitter:card" content="images/sweet-potato-waffle-md.jpg">
+    <meta name="twitter:card" content="https://isabelfalin.github.io/wdd131/recipes/images/sweet-potato-waffle-md.jpg">
     </head>
 <body>
     <header>
