--- a/recipes/index.html
+++ b/recipes/index.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="recipes.css">
     <title>RecipeBook</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="RecipeBook">
     <meta property="og:type" content="website" />
