--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,12 +8,12 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
-    <link rel="stylesheet" href="recipes.css">
+    <script defer src="main.js"></script>
     <title>RecipeBook</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="recipes.css">
 
     <meta property="og:title" content="RecipeBook">
     <meta property="og:type" content="website" />
