because im happy :)

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="main.js"></script>
+    <script defer src="main.js" type="module"></script>
     <title>RecipeBook</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
         <div id="bar">
             <label id="search" for="search"></label>
             <input type="text" id="searchbar" name="search" placeholder="Find A Recipe">
-            <img src="images/search.svg" alt="Search img">
+            <a id="searchbutton" href="#"><img src="images/search.svg" alt="Search img"></a>
         </div>
         <hr/>
         <div id="main-content">
