final site plan C8 Corvette website

--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -35,7 +35,7 @@
 			<!-- change this -->
 
 			<h3>Dynamic elements</h3>
-			<p>[Describe dynamic elements provided by Javascript here]</p>
+			<p>I will use javascript to make a moving photo carousel of different pictures of C8 Corvettes</p>
 			<!-- change this -->
 
 			<hr>
@@ -117,12 +117,47 @@
 
 			<h2>Content</h2>
 			<h3>Home page</h3>
-			<p>The 2023 Chevrolet Corvette C8 is an iconic sports car that combines incredible performance with modern design. Here are the detailed specifications:
-                Chevrolet Corvette C8 (2023)
-                Manufacturer: Chevrolet  
-                Model: Corvette C8 (Mid-Engine)  </p>
+				<p>The 2023 Chevrolet Corvette C8 is an iconic sports car that combines incredible performance with modern design. Here are the detailed specifications:
+					Chevrolet Corvette C8 (2023)
+					Manufacturer: Chevrolet  
+					Model: Corvette C8 (Mid-Engine)</p>
+				<img src="images/RedCarousel.jpg" alt="Red C8">
+				<img src="images/orange.jpg.avif" alt="Orange C8">
+				<img src="images/blueCarousel.webp" alt="Blue C8">
+				<img src="images/2020-chevrolet-corvette-stingray.jpg" alt="Red C8">
+				
 			<h3>[Page 2]</h3>
-			<p>[content, images, data for the subpage]</p>
+			<p>Development and Background
+				For decades, Chevrolet engineers toyed with the idea of a mid-engine Corvette to improve handling and performance. Corvette chief engineer Zora Arkus-Duntov was an early advocate for this layout, but cost and production challenges prevented it from becoming a reality for many years.
+				By the late 2010s, Chevrolet finally committed to the idea, aiming to push the Corvette into supercar territory while keeping it relatively affordable compared to European rivals.
+				Launch and Models
+				C8 Corvette Stingray (2020–Present)
+				* Unveiled on July 18, 2019, the 2020 Corvette Stingray debuted as the first mid-engine Corvette.
+				* Engine: 6.2L LT2 V8, producing 490 hp (495 hp with Z51 package).
+				* Performance: 0-60 mph in 2.9 seconds (with Z51 Performance Package).
+				* Transmission: First Corvette to use an 8-speed dual-clutch automatic (no manual option).
+				* Interior: Driver-focused cockpit with a 12-inch digital instrument cluster and a modern infotainment system.https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.motortrend.com%2Fnews%2F2024-chevrolet-corvette-e-ray-pros-cons-review%2F&psig=AOvVaw1CJ8-PC2jVpBq9kuQ1Nzs4&ust=1742495504234000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKD309_jlowDFQAAAAAdAAAAABAJ
+				C8 Corvette Z06 (2023–Present)
+				* Naturally aspirated 5.5L LT6 V8 with a flat-plane crank.
+				* Produces 670 hp, making it the most powerful naturally aspirated V8 in a production car.
+				* Rev limit: 8,600 RPM, inspired by race cars.
+				* More aggressive aerodynamics and a wider stance than the Stingray.
+				C8 Corvette E-Ray (2024–Present)
+				* First-ever hybrid, all-wheel-drive Corvette.
+				* Combines the LT2 V8 with an electric motor for a total of 655 hp.
+				* Can drive in stealth mode (electric-only) for short distances.
+				* 0-60 mph in 2.5 seconds, making it the quickest Corvette ever.
+				Impact and Legacy
+				* The mid-engine layout places the C8 in direct competition with exotic supercars like Ferrari, Lamborghini, and McLaren.
+				* It retains the Corvette’s tradition of high performance at a relatively affordable price (starting around $65,000 for the base model).
+				* The introduction of hybrid technology and AWD marks a shift in Corvette’s future, possibly paving the way for electrification.
+				</p>
+				<img src="images/C8#1.jpg.webp" alt="Red C8">
+				<img src="images/Zora-Arkus.jpeg" alt="Zora Arkus">
+				<img src="images/2020-chevrolet-corvette-stingray-041-1565832668.jpg.avif" alt="Red C8">
+				<img src="images/C8#3.png" alt="White C8">
+				<img src="images/C8#4.jpg.avif" alt="Blue C8">
+				<img src="images/Corvette-Logo-Closeup.jpg.avif" alt="Corvette Logo">
 			<h2>Wireframes</h2>
 			<p>
 				Create two wireframes for your site. One for each page and list them
@@ -134,14 +169,14 @@
 				[Any additional details about home that the wireframe does not make
 				clear]
 			</p>
-			<img src="#" alt="home page wireframe">
+			<img src="images/C8HomePage.drawio.pdf" alt="home page wireframe">
 
 			<h3>[Page 2]</h3>
 			<p>
 				[Any additional details about page 2 that the wireframe does not make
 				clear]
 			</p>
-			<img src="#" alt="page 2 wireframe">
+			<img src="images/C8ChildPage.drawio.pdf" alt="page 2 wireframe">
 		</main>
 	
 
