trying to fix url problem

--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -154,7 +154,8 @@
 				</p>
 				<img src="images/C8#1.jpg.webp" alt="Red C8">
 				<img src="images/Zora-Arkus.jpeg" alt="Zora Arkus">
-		
+				<img src="images/2020-chevrolet-corvette-stingray-041-1565832668.jpg.avif" alt="Red C8">
+				<img src="images/C8#3.png" alt="White C8">
 				<img src="images/C8#4.jpg.avif" alt="Blue C8">
 				<img src="images/Corvette-Logo-Closeup.jpg.avif" alt="Corvette Logo">
 			<h2>Wireframes</h2>
