adding car site to my home page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="creditcard/index.html">Credit Card Page</a>
             <a href="register/register.html">Register Page</a>
             <a href="recipes/index.html">Recipes Page</a>
+            <a href="final/site-plan.html">C8 Corvette Page</a>
         </nav>
     </main>
     <footer></footer>
