--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -152,11 +152,11 @@
 				* It retains the Corvette’s tradition of high performance at a relatively affordable price (starting around $65,000 for the base model).
 				* The introduction of hybrid technology and AWD marks a shift in Corvette’s future, possibly paving the way for electrification.
 				</p>
-				<img src="images/C8#1.jpg.webp" alt="Red C8">
+				<img src="images/C81.jpg.webp" alt="Red C8">
 				<img src="images/Zora-Arkus.jpeg" alt="Zora Arkus">
 				<img src="images/2020-chevrolet-corvette-stingray-041-1565832668.jpg.avif" alt="Red C8">
-				<img src="images/C8#3.png" alt="White C8">
-				<img src="images/C8#4.jpg.avif" alt="Blue C8">
+				<img src="images/C83.png" alt="White C8">
+				<img src="images/C84.jpg.avif" alt="Blue C8">
 				<img src="images/Corvette-Logo-Closeup.jpg.avif" alt="Corvette Logo">
 			<h2>Wireframes</h2>
 			<p>
