adding more dynamic details

--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -35,7 +35,10 @@
 			<!-- change this -->
 
 			<h3>Dynamic elements</h3>
-			<p>I will use javascript to make a moving photo carousel of different pictures of C8 Corvettes</p>
+			<p>I will use javascript to make a moving photo carousel of different pictures of C8 Corvettes.
+				The dynamic content for ym site will include a javascript based carousel, it will load the carousle images from a dynamic template I create from a JSON array of images.
+				I will use the carousels JS object API to configure it's options.
+			</p>
 			<!-- change this -->
 
 			<hr>
