beginning html and css

--- a/final/site-plan.html
+++ b/final/site-plan.html
@@ -2,7 +2,7 @@
 <html lang="en-us"><head>
 		<meta charset="utf-8">
 		<title>Site Plan</title>
-		<link type="text/css" rel="stylesheet" href="site-plan.css">
+		<link type="text/css" rel="stylesheet" href="styles/site-plan.css">
 	</head>
     <!--How about a "Dream Car Showcase" website?
     Home Page: A welcome message introducing the site, explaining that it highlights a cool car (your dream car or a 
