finished Models page

--- a/final/home.html
+++ b/final/home.html
@@ -41,17 +41,20 @@
 
     <h1 id="europe-title">Models</h1>
 
-    <section class="msg">
+  
+    </section>
+    <section id="msg">
         <div class="container">
-            <h2>Different C8 Corvette Models</h2>
-            <p>The C8 Corvette is a revolutionary sports car, boasting a mid-engine layout, offering supercar-level 
+            <h2>Different C8 Corvette Models </h2>
+            <!-- The 'ancient snow rides' bit will be in bold -->
+            <p><span class="little-blue-highlight"></span> The C8 Corvette is a revolutionary sports car, boasting a mid-engine layout, offering supercar-level 
                 performance at an accessible price, and available as both a coupe and convertible. From the Z06 model
                 to the classic C8 Corvette Stingray, this website has all the information on the different models that
                 you need to know.</p>
             <a class="history-button" href="models.html">Models</a>
         </div>
-        <img class="snowboarder" src="images/C84.jpg.avif" alt="C8 Corvette">
     </section>
+
 
    
 </main>
