--- a/final/models.html
+++ b/final/models.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/models.css">
     <script src="https://kit.fontawesome.com/d1276cdc53.js" crossorigin="anonymous"></script>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');  
     </style>
 </head>
 
@@ -30,10 +30,10 @@
         </header>
 
     <main>
-     <section id="early-beginnings-title">
+     <section id="background-title">
             <h2>Development and Background: </h2>
             <!-- The 'ancient snow rides' bit will be in bold -->
-            <h4><span class="little-blue-highlight"></span> For decades, Chevrolet engineers
+            <h4>For decades, Chevrolet engineers
                 toyed with the idea of a mid-engine Corvette to improve handling and performance. Corvette chief 
                 engineer Zora Arkus-Duntov was an early advocate for this layout, but cost and production challenges 
                 prevented it from becoming a reality for many years.
@@ -46,13 +46,13 @@
                  Chevrolet turned this long-held dream into a reality, unveiling the first-ever production mid-engine 
                  Corvette to the world.</h4>
 
-                <img id="early-beginnings-img" src="images/Zora-Arkus.jpeg" alt="Zora Arkus image">
+                <img id="background-img" src="images/Zora-Arkus.jpeg" alt="Zora Arkus image">
         </section>
 
-        <section id="birth-modern-snowboarding-title">
+        <section id="stingray-title">
             <!-- The 'year' for each one will either be in bold or a different color, as directed by siteplan -->
             <h2>C8 Corvette Stingray (2020–Present):</h2>
-            <h4><span class="little-blue-highlight"></span>Unveiled on July 18, 2019, the 2020 Corvette Stingray debuted as
+            <h4>Unveiled on July 18, 2019, the 2020 Corvette Stingray debuted as
                 the first mid-engine Corvette. </h4>
                 <h4>
                     Engine: 6.2L LT2 V8, producing 490 hp (495 hp with Z51
@@ -67,9 +67,9 @@
                 <img id="modern-stingray" src="images/2020-chevrolet-corvette-stingray.jpg" alt="Sting Ray Modern">
         </section>
 
-        <section id="the-rise-snowboarding">
+        <section id="z06-title">
             <h2>C8 Corvette Z06 (2023–Present):</h2>
-            <h4><span class="little-blue-highlight"></span>The 2023 Chevrolet Corvette Z06, a track-focused, 
+            <h4>The 2023 Chevrolet Corvette Z06, a track-focused, 
                 high-performance version of the C8 Corvette making it a true American supercar.Naturally 
                 aspirated 5.5L LT6 V8 with a flat-plane crank. Produces 670 hp, making it the most powerful 
                 naturally aspirated V8 in a production car. The unconventional V-8 hooks up to an eight-speed 
@@ -81,12 +81,12 @@
                     Rev limit: 8,600 RPM, inspired by race cars. More aggressive aerodynamics and a wider stance than the
                     Stingray.
                 </h4>
-                <img id="rise-snowboarding-img" src="images/C84.jpg.avif" alt="nagano olympic games image">
+                <img id="z06-img" src="images/C84.jpg.avif" alt="Z06">
         </section>
 
         <section id="snowboarding-modern-era">
             <h2>C8 Corvette E-Ray (2024–Present):</h2>
-            <h4><span class="little-blue-highlight"></span>First-ever hybrid, all-wheel-drive Corvette.
+            <h4>First-ever hybrid, all-wheel-drive Corvette.
 				Combines the LT2 V8 with an electric motor for a total of 655 hp.
 				Can drive in stealth mode (electric-only) for short distances.
 				0-60 mph in 2.5 seconds, making it the quickest Corvette ever.The E-Ray is something of a middle 
@@ -98,7 +98,7 @@
                      0–60 and quarter-mile times and came up just short of the Z06 in our at-the-limit handling 
                      exercises—despite being as much as 261 pounds heavier. So it’s just as quick as the Z06, and 
                      its e-AWD system should theoretically ensure a boost in front-end traction.</h4>
-                <img id="snowboarding-modern-img" src="images/C83.avif" alt="olympics in Beijing">
+                <img id="e-ray-img" src="images/C83.avif" alt="E Ray">
         </section>    
 
         <section id="impact-legacy">
@@ -120,7 +120,7 @@
 <footer>
     <img src="images/Logo.png" alt="The C8 Logo">
     <div id="footer-navigation">
-        <p>The Peaks &copy; 2024 - Isabel Falin</p>
+        <p>See the 8 &copy; 2024 - Isabel Falin</p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <p><a href="home.html">Home</a></p>
     </div>
