--- a/final/home.html
+++ b/final/home.html
@@ -38,30 +38,19 @@
     </header>
 <main>
     
-
-    <h1 id="europe-title">Models</h1>
-
-  
-    </section>
-    <section id="msg">
-        <div class="container">
+        <section id="msg">
+            <h1 id="title">Designs</h1>
             <h2>Different C8 Corvette Models </h2>
-            <!-- The 'ancient snow rides' bit will be in bold -->
-            <p><span class="little-blue-highlight"></span> The C8 Corvette is a revolutionary sports car, boasting a mid-engine layout, offering supercar-level 
-                performance at an accessible price, and available as both a coupe and convertible. From the Z06 model
-                to the classic C8 Corvette Stingray, this website has all the information on the different models that
-                you need to know.</p>
-            <a class="history-button" href="models.html">Models</a>
-        </div>
-    </section>
-
-
-   
+                <p>The C8 Corvette is a revolutionary sports car, boasting a mid-engine layout, offering supercar-level 
+                    performance at an accessible price, and available as both a coupe and convertible. From the Z06 model
+                    to the classic C8 Corvette Stingray, this website has all the information on the different models that
+                    you need to know.</p>
+        </section>
 </main>
     <footer>
-        <img src="images/thepeakslogo.png" alt="The Peaks Logo">
+        <img src="images/Logo.png" alt="C8 Logo">
         <div id="footer-navigation">
-            <p>The Peaks &copy; 2024 - Isabel Falin</p>
+            <p>See the 8 &copy; 2024 - Isabel Falin</p>
             <p><a href="site-plan.html">Site Plan</a></p>
             <p><a href="home.html">Home</a></p>
         </div>
