fixing home link font

--- a/final/models.html
+++ b/final/models.html
@@ -20,6 +20,8 @@
         <nav>
             <a class="active" href="home.html"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="models.html"><i class="fa-solid fa-timeline"></i> Models</a>
+            <a class="siteplan" href="site-plan.html"><i class="fa-solid fa-file"></i> Site Plan</a>
+            
         </nav>
 
         <h1 class="hero-title">The C8 Chevrolet Corvette Through History</h1>
