finished with final website html, css, and javascript

--- a/final/home.html
+++ b/final/home.html
@@ -64,7 +64,7 @@
                      control buttons running along the console creates a jet fighter-inspired vibe. Chevrolet 
                      designed the cabin to feel special and immersive, whether you’re cruising on the highway or 
                      attacking a twisty back road.</p>
-        </section></p>
+        </section>
 </main>
     <footer>
         <img src="images/Logo.png" alt="C8 Logo">
