--- a/final/models.html
+++ b/final/models.html
@@ -119,13 +119,11 @@
         </section>
     </main>
 
-<footer>
-    <img src="images/Logo.png" alt="The C8 Logo">
-    <div id="footer-navigation">
-        <p>See the 8 &copy; 2024 - Isabel Falin</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
-        <p><a href="home.html">Home</a></p>
-    </div>
-  </footer>
+    <footer>
+        <img src="images/Logo.png" alt="C8 Logo">
+            <p>See the 8 &copy; 2024 - Isabel Falin</p>
+            <p><a href="site-plan.html">Site Plan</a></p>
+            <p><a href="home.html">Home</a></p>
+    </footer>
 </body>
 </html>
