--- a/final/home.html
+++ b/final/home.html
@@ -84,7 +84,8 @@
                     // options
                     draggable: false, 
                     wrapAround: true,
-                    autoPlay: true
+                    autoPlay: true,
+                    lazyLoad: true
 
                 });
             });
